# aoc

./: .pre-commit-config.yaml  README.md  pyproject.toml
2024/day_1/: main.py
2024/day_2/: main.py
2024/template/: main.py
