[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["James Sutton <jpwsutton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.2"
black = "^24.10.0"
pre-commit = "^4.0.1"


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "D",    # pydocstyle
    "I",    # isort
    "B",    # bugbear
    "ANN",  # annotations
    "N",    # pep8-naming
    "C4",   # Comprehensions
    "DTZ",  # DatetimeZ
    "Q",    # Quotes
    "RUF",  # Ruff
]
ignore = ["D203", "D213"]
fixable = ["ALL"]
unfixable = []
line-length = 120


[tool.black]
line-length=120

[tool.ruff.lint.pydocstyle]
convention = "google"
